force-app/main/default/objects/Practice_Patient__c/Practice_Patient__c.object-meta.xml
<CustomObject>
    <description>Junction object that represents the relationship between a Practice (Account)
and a Patient (Contact). Records are auto-managed based on Cases.</description>
    <label>Practice–Patient</label>
    <nameField>
        <displayFormat>PP-{000000}</displayFormat>
        <label>Practice Patient</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Practice Patients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>