force-app/main/default/objects/Practice_Patient__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <label>Patient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Practice Patients</relationshipLabel>
    <relationshipName>Practice_Patients</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>