force-app/main/default/objects/Practice_Patient__c/fields/PatientName__c.field-meta.xml
<CustomField>
    <fullName>PatientName__c</fullName>
    <description>Link to the patient</description>
    <formula>HYPERLINK(
  &quot;/lightning/r/Contact/&quot; &amp; Patient__r.Id &amp; &quot;/view&quot;,
  IF(
    AND(ISBLANK(Patient__r.FirstName), ISBLANK(Patient__r.LastName)),
    &quot;View Patient&quot;,
    TRIM(Patient__r.FirstName &amp; &quot; &quot; &amp; Patient__r.LastName)
  ),
  &quot;_self&quot;
)</formula>
    <label>Patient&apos;s Name</label>
    <type>Text</type>
</CustomField>