force-app/main/default/objects/Practice_Patient__c/fields/Practice__c.field-meta.xml
<CustomField>
    <fullName>Practice__c</fullName>
    <label>Practice</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Practice Patients</relationshipLabel>
    <relationshipName>Practice_Patients</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>