force-app/main/default/objects/Practice_Patient__c/fields/PracticePatientKey__c.field-meta.xml
<CustomField>
    <fullName>PracticePatientKey__c</fullName>
    <externalId>true</externalId>
    <label>Practice Patient Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>